--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -6,8 +6,8 @@ ja:
       already_confirmed: "は既に登録済みです。ログインしてください"
       not_locked: "ロックされていません"
       not_saved:
-        one: "エラーにより、この %{resource} を保存できません："
-        other: "%{count} 個のエラーにより、この %{resource} を保存できません："
+        one: "エラーにより、この %{resource} を保存できません"
+        other: "%{count} 個のエラーにより、この %{resource} を保存できません"
 
   devise:
     failure:
@@ -19,6 +19,7 @@ ja:
       invalid_token: '認証キーが不正です'
       timeout: '一定時間が経過したため、再度ログインが必要です'
       inactive: 'アカウントがまだ有効になっていません'
+      not_found_in_database: "%{authentication_keys} もしくはパスワードが間違っています。"
     sessions:
       signed_in: 'ログインしました'
       signed_out: 'ログアウトしました'
